fix / avoid horizontal shift when scrollbar appears

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@ body {
 	/* Clave para navegadores modernos */
 }
 
+html {
+	scrollbar-gutter: stable;
+}
+
 :root {
 	--radius: 0.5rem;
 }
